# CondorBot

./: .gitignore  CHANGELOG_27.md  CHANGELOG_35.md  CHANGELOG_38.md  CHANGELOG_42.md  README.md  condor.py  config.py  config.yaml.dist  console.cmd  console.py  install.cmd  main.py  pyproject.toml  run.cmd
commands/: flight_plan_command.py
condor/: config.py  flight_plan.py  server_manager.py
services/: agent.py  dialogs.py  flight_plan_service.py
tests/: config_test.yaml  conftest.py
tests/condor/: test_config.py  test_flightplan.py  test_server_manager.py
tests/files/: test.fpl  test2.fpl
tests/flightplan/: test_flightplan.py  test_server_manager.py
