[tool.poetry]
name = "condor-bot"
version = "0.1.0"
description = ""
authors = ["Michel NAUD <michel.naud26400@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
dotenv = "^0.9.9"
rich = "^13.9.4"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"
psutil = "^7.0.0"
pywinauto = "^0.6.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120